Fix Travis breakage from 9465250
Adds a check for whether -Wno-mismatched-new-delete is supported before
using it, to build on both old (Travis) and new (El Capitan) OSX machines.

Review-URL: https://codereview.appspot.com/309180043

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -447,10 +447,12 @@ endif ()
 if (UNIX OR "${CMAKE_SYSTEM_VERSION}" STRLESS "6.2")
   set(cs2bug_res "cs2bug")
   # Avoid warnings on our deliberate errors
+  set(cs2bug_flags "")
   if (UNIX)
-    set(cs2bug_flags "-Wno-mismatched-new-delete")
-  else ()
-    set(cs2bug_flags "")
+    CHECK_C_COMPILER_FLAG("-Wno-mismatched-new-delete" mismatch_flag_avail)
+    if (mismatch_flag_avail)
+      set(cs2bug_flags "-Wno-mismatched-new-delete")
+    endif ()
   endif ()
 else ()
   # For /MTd and /MDd, or if on win8 (i#1161), we skip the
