i#1923, DRi#2127, DRi#1374: eliminate UNIX symlink library versioning
Eliminates libdynamorio.so versioning on UNIX platforms to avoid numerous
problems (DRi#2127: hardcoded DT_NEEDED, DRi#1374: similar issues on Mac,
Android symlink limitations).  These versions were not providing much
benefit, as we weren't using the system loader.  DR's loader and the DRMF
init code provide their own client version compatibility checks.

Updates DR to 549ce61 for the same sorts of changes in the DR code as well
as a fix for DRi#2128.
Updates test asm line numbers for asm define changes.

Review-URL: https://codereview.appspot.com/311500043

--- a/drsymcache/CMakeLists.txt
+++ b/drsymcache/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2012-2015 Google, Inc.  All rights reserved.
+# Copyright (c) 2012-2017 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -86,7 +86,7 @@ add_library(drsymcache SHARED ${srcs} ${external_srcs})
 # Set a preferred base to avoid conflict if we can
 set(PREFERRED_BASE 0x77800000)
 configure_DynamoRIO_client(drsymcache)
-set_target_properties(drsymcache PROPERTIES VERSION ${DRMF_VERSION_MAJOR_MINOR})
+set_library_version(drsymcache ${DRMF_VERSION_MAJOR_MINOR})
 configure_drsymcache_target(drsymcache "drmgr" "drsyms")
 export_drsymcache_target(drsymcache "drmgr" "drsyms")
 install(FILES drsymcache.h DESTINATION ${DRMF_INSTALL_INC})
