--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -58,7 +58,8 @@ include_directories("../third_party/valgrind")
 # Restore original flags from before configure_DynamoRIO_client plus
 # add_subdirectory(dynamorio) cleared global cflags.
 
-if (WIN32)
+option(BUILD_MINGW "Build test with MinGW if present" ON)
+if (WIN32 AND BUILD_MINGW)
   # if MinGW gcc is available, we do some extra tests
   # (we do not yet support Cygwin)
   # Look for version installed with Cygwin first just b/c my machines have a
@@ -80,7 +81,10 @@ if (WIN32)
     get_filename_component(mingw_path ${mingwlib} PATH)
     message(STATUS "Found ${mingwlib}, enabling shared lib MinGW test")
   endif ()
-endif (WIN32)
+else ()
+  set(GCC OFF)
+  message(STATUS "Disabling MinGW tests as requested")
+endif ()
 
 function(append_compile_flags target newflags)
   get_target_property(cur_flags ${target} COMPILE_FLAGS)
@@ -776,7 +780,6 @@ if (TOOL_DR_MEMORY)
           "-no_replace_malloc" "" OFF operators 0 "")
     endif (USE_DRSYMS)
 
-    set(GCC OFF)#TEMPORARY
     if (GCC)
       # We have issues w/ static libstdc++ FPO so we ask for better callstacks (i#783)
       # With i#805, -no_callstack_use_top_fp is set automatically
