i#1949 Printing id of current thread
Added printing id of a thread that performs library call
Added return address printing for library calls
Fixed logdir string parsing bug
Fixed a bug when cmake can't find dbghelp.dll in a case of build
without SDK installed.
Fixed a bug that causes warnings during drltrace configuring.

Fixes #1949
Fixes #1954
Fixes #1956

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -550,12 +550,12 @@ if (WIN32)
     "${DDK_ROOT}/bin/${ARCH_SFX}/dbghelp.dll"
     "${DDK_ROOT}/tools/tracing/${DDK_SFX}/dbghelp.dll"
     "${PROGFILES}/Microsoft Visual Studio */Common7/IDE/Remote Debugger/${ARCH_SFX}/dbghelp.dll"
-    "${PROGFILES32}/Windows Kits/*/Debuggers/${ARCH_SFX}/dbghelp.dll")
+    "${PROGFILES32}/Windows Kits/*/Debuggers/${ARCH_SFX}/dbghelp.dll"
+    # For Visual Studio 2010+, x64 dbghelp.dll resides in Program
+    # Files (x86) rather than Program Files.
+    "${PROGFILES32}/Microsoft Visual Studio */Common7/IDE/Remote Debugger/${ARCH_SFX}/dbghelp.dll")
   if (X64)
     set(dbghelp_paths ${dbghelp_paths}
-      # For Visual Studio 2010+, x64 dbghelp.dll resides in Program
-      # Files (x86) rather than Program Files.
-      "${PROGFILES32}/Microsoft Visual Studio */Common7/IDE/Remote Debugger/${ARCH_SFX}/dbghelp.dll"
       # For older versions of windbg, x64 dbghelp.dll resides here.
       "${PROGFILES}/Debugging Tools for Windows (x64)/dbghelp.dll")
   else (X64)
@@ -599,12 +599,12 @@ if (WIN32)
   endif ()
   set(symsrv_paths
     "${PROGFILES}/Microsoft Visual Studio */Common7/IDE/Remote Debugger/${ARCH_SFX}/symsrv.dll"
-    "${PROGFILES32}/Windows Kits/*/Debuggers/${ARCH_SFX}/symsrv.dll")
+    "${PROGFILES32}/Windows Kits/*/Debuggers/${ARCH_SFX}/symsrv.dll"
+    # For Visual Studio 2010+, x64 symsrv.dll resides in Program
+    # Files (x86) rather than Program Files.
+    "${PROGFILES32}/Microsoft Visual Studio */Common7/IDE/Remote Debugger/${ARCH_SFX}/symsrv.dll")
   if (X64)
     set(symsrv_paths ${symsrv_paths}
-      # For Visual Studio 2010+, x64 symsrv.dll resides in Program
-      # Files (x86) rather than Program Files.
-      "${PROGFILES32}/Microsoft Visual Studio */Common7/IDE/Remote Debugger/${ARCH_SFX}/symsrv.dll"
       # For older versions of windbg, x64 symsrv.dll resides here.
       "${PROGFILES}/Debugging Tools for Windows (x64)/symsrv.dll")
   else (X64)
