i#1960 drltrace tests: added initial exit-code-only test for drltrace (#1964)
Added initial exit-code-only test for drltrace.

--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -107,3 +107,15 @@ endif ()
 install(TARGETS drltrace DESTINATION "${INSTALL_BIN}"
   PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
   WORLD_READ WORLD_EXECUTE)
+
+##################################################
+# drltrace tests
+
+# XXX i#1960: add more tests for drltrace that checks the output contains
+# expected library calls.
+#
+if (BUILD_TOOL_TESTS)
+  get_target_property(app_path drsyscall_app LOCATION${location_suffix})
+  get_target_property(drltrace_path drltrace LOCATION${location_suffix})
+  add_test(drltrace ${drltrace_path} -- ${app_path})
+endif (BUILD_TOOL_TESTS)
