i#1949 printing id of current thread for drltrace
Added printing of current thread id and return address for each
called libcall.

Fixes #1949

--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -111,7 +111,7 @@ install(TARGETS drltrace DESTINATION "${INSTALL_BIN}"
 ##################################################
 # drltrace tests
 
-# XXX i#1960: add more tests for drltrace that checks the output contains
+# XXX i#1960: add more tests for drltrace that check the output contains
 # expected library calls.
 #
 if (BUILD_TOOL_TESTS)
