i#1959 add libcall args sym printing: syscall args support
Added arguments printing of already known syscalls from drsyscall's
tables for Windows and Linux.

--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -68,6 +68,7 @@ configure_DynamoRIO_client(drltracelib)
 use_DynamoRIO_extension(drltracelib drmgr_static)
 use_DynamoRIO_extension(drltracelib drwrap_static)
 use_DynamoRIO_extension(drltracelib drx_static)
+use_DynamoRIO_extension(drltracelib drsyscall_static)
 
 if ("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
   # i#1805: see comment in drstrace/CMakeLists.txt
