droption usage in the drltrace client
Added droption usage instead of manual parsing in the drltrace client.
Added only_to_lib argument support in the drltrace_frontend.
Made only_to_lib case insensitive.
Drltrace changed to be a C++ client.
Drltrace build disabled for MacOS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1862,6 +1862,7 @@ if (TOOL_DR_MEMORY AND WIN32)
   add_subdirectory(drstrace)
 endif (TOOL_DR_MEMORY AND WIN32)
 
+# FIXME i#1987: enable support of drltrace under MacOS
 if (NOT APPLE)
   add_subdirectory(drltrace)
 endif()
