--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -37,9 +37,7 @@ include(${PROJECT_SOURCE_DIR}/make/policies.cmake NO_POLICY_SCOPE)
 # drltracelib
 
 set(srcs
-    drltrace.c)
-
-set(external_srcs ../framework/drmf_utils.c)
+    drltrace.cpp)
 
 if (WIN32)
   set(srcs ${srcs} ${PROJECT_SOURCE_DIR}/make/resources.rc)
@@ -47,7 +45,7 @@ endif ()
 
 set(DynamoRIO_USE_LIBC OFF)
 
-add_library(drltracelib SHARED ${srcs} ${external_srcs})
+add_library(drltracelib SHARED ${srcs})
 
 # We share the framework version # for now
 set_library_version(drltracelib ${DRMF_VERSION_MAJOR_MINOR})
@@ -70,7 +68,15 @@ use_DynamoRIO_extension(drltracelib drwrap_static)
 use_DynamoRIO_extension(drltracelib drx_static)
 use_DynamoRIO_extension(drltracelib drsyscall_static)
 use_DynamoRIO_extension(drltracelib drcovlib_static)
+use_DynamoRIO_extension(drltracelib droption)
 
+# XXX i#2429: DR's droption.h includes both <string.h> and <string.h>
+# we should remove <string.h> and replace the strcmp comparison with
+# a std::string. Then we can remove special if here and below.
+if (UNIX)
+  # to avoid conflicts with new declaration with "C" linkage in utils.h
+  append_property_string(TARGET drltracelib COMPILE_FLAGS "-DNOLINK_STRCASESTR")
+endif()
 if ("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
   # i#1805: see comment in drstrace/CMakeLists.txt
   append_property_string(TARGET drltracelib LINK_FLAGS "/force:multiple")
@@ -105,6 +111,12 @@ if (WIN32)
 else ()
   set_property(TARGET drltrace PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
 endif ()
+
+# XXX: see DR's i#2429 and comment above.
+if (UNIX)
+  # to avoid conflicts with new declaration with "C" linkage in utils.h
+  append_property_string(TARGET drltrace COMPILE_FLAGS "-DNOLINK_STRCASESTR")
+endif()
 
 install(TARGETS drltrace DESTINATION "${INSTALL_BIN}"
   PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
