--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -138,24 +138,38 @@ if (BUILD_TOOL_TESTS)
   add_test(drltrace_libcalls ${drltrace_path} -logdir - -print_ret_addr -- ${app_path})
   add_test(drltrace_symargs ${drltrace_path} -logdir - -num_max_args 4 -- ${app_path})
 
+  set(path_to_config ${CMAKE_CURRENT_BINARY_DIR}/bin/drltrace.config)
+
+  # copy drltrace.config required to test libcall arguments printing
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/drltrace.config ${path_to_config} COPYONLY)
+
+  add_test(drltrace_libargs ${drltrace_path} -logdir - -only_from_app
+  -config ${path_to_config} -- ${app_path})
+
   #regex strings for libcalls and arguments printing test
   set(libcall_args1_01 "    arg 0: 0x([0-9a-f]+)\n    arg 1: 0x([0-9a-f]+)\n")
   set(libcall_ret "    and return to module id:([0-9]+), offset:0x([0-9a-f]+)\n")
+
 if (WIN32)
   set(libcall_args2_0 "    arg 0: 0x([0-9a-f]+) \\(type=HANDLE, size=0x([0-9a-f]+)\\)\n")
   set(libcall_args2_1 "    arg 1: 0x([0-9a-f]+) \\(type=int, size=0x([0-9a-f]+)\\)\n")
 
   set(libcall_name1 "~~([0-9a-f]+)~~ KERNELBASE.dll!VirtualQuery\n")
   set(libcall_name2 "~~([0-9a-f]+)~~ ntdll.dll!ZwQueryInformationProcess\n")
+  set(libcall_printf "arg 0: done\n \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
 else ()
-  set(libcall_args2_0 "    arg 0: 0x([0-9a-f]+) \\(type=char \\*\\*, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_args2_0 "    arg 0: /dev/null \\(type=char \\*\\*, size=0x([0-9a-f]+)\\)\n")
   set(libcall_args2_1 "    arg 1: 0x([0-9a-f]+) \\(type=<unknown>\\*, size=0x([0-9a-f]+)\\)\n")
 
   set(libcalls_libcall_name1 "~~([0-9a-f]+)~~ libc.so.6!puts\n")
   set(libcalls_libcall_name2 "~~([0-9a-f]+)~~ libc.so.6!open\n")
+  set(libcall_printf "arg 0: done \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
 endif(WIN32)
   set_tests_properties(drltrace_libcalls PROPERTIES PASS_REGULAR_EXPRESSION
                        ${libcall_name1}${libcall_args1_01}${libcall_ret})
   set_tests_properties(drltrace_symargs PROPERTIES PASS_REGULAR_EXPRESSION
                        ${libcall_name2}${libcall_args2_0}${libcall_args2_1})
+  set_tests_properties(drltrace_libargs PROPERTIES PASS_REGULAR_EXPRESSION
+                       ${libcall_printf})
+
 endif (BUILD_TOOL_TESTS)
