--- a/drltrace/drltrace.config
+++ b/drltrace/drltrace.config
@@ -1,7 +1,12 @@
-; The syntax of this config file is simple. To add new function, it's enough to specify
-; each argument of the function, function name itself and return type separated by commas.
+; The syntax of this config file is simple. To add a new function, it's enough to specify
+; function's return type, function name and each argument of the function separated by
+; commas.
 ; Example: int strcmp (char *, char *) -> int,strcmp,char *,char *
+; i#1948: The syntax now does not cover many other more complex function prototypes
+; e.g. atexit(). We need to improve that.
+;
 ; NOTE: the syntax is not space sensitive.
+
 int,strcmp, char*, char*
 int,wcscmp,wchar*,wchar*
 int,printf,char *
