i#1948 drltrace libcall args printing: config file init
Implemented simplified language for function prototypes description
to provide an external source where user can define custom libcalls
to be able to print arguments.

Added config file parsing routines
Added hashtable to store libcalls info
Added strings printing routine
Added a third way to print arguments
Added simplified config file with strcmp/wcscmp/printf/puts prototypes
Added tests for Windows and Linux

--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -127,6 +127,15 @@ install(TARGETS drltrace DESTINATION "${INSTALL_BIN}"
   WORLD_READ WORLD_EXECUTE)
 copy_target_to_device(drltrace)
 copy_and_adjust_drpaths(${CMAKE_RUNTIME_OUTPUT_DIRECTORY} drltrace)
+
+##################################################
+# drltrace config
+
+set(conf_out ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drltrace.config)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/drltrace.config ${conf_out} COPYONLY)
+install(FILES ${conf_out} DESTINATION "${INSTALL_BIN}" PERMISSIONS ${owner_access}
+        GROUP_READ WORLD_READ)
+
 ##################################################
 # drltrace tests
 
@@ -140,12 +149,6 @@ if (BUILD_TOOL_TESTS)
   add_test(drltrace ${drltrace_path} -- ${app_path})
   add_test(drltrace_libcalls ${drltrace_path} -logdir - -print_ret_addr -- ${app_path})
   add_test(drltrace_symargs ${drltrace_path} -logdir - -num_max_args 4 -- ${app_path})
-
-  set(path_to_config ${INSTALL_BIN}/drltrace.config)
-
-  # copy drltrace.config required to test libcall arguments printing
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/drltrace.config
-                 ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drltrace.config COPYONLY)
 
   add_test(drltrace_libargs ${drltrace_path} -logdir - -only_from_app -- ${app_path})
 
@@ -162,20 +165,19 @@ if (WIN32)
   set(libcall_printf "arg 0: done\n \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
   # some machines use WriteFile instead of printf, trying to handle both
   set(libcall_WriteFile "arg 2: 0x([0-9a-f]+) \\(type=DWORD, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_both_variants "${libcall_printf}\;${libcall_WriteFile}")
 else ()
   set(libcall_args2_0 "    arg 0: /dev/null \\(type=char \\*\\*, size=0x([0-9a-f]+)\\)\n")
   set(libcall_args2_1 "    arg 1: 0x([0-9a-f]+) \\(type=<unknown>\\*, size=0x([0-9a-f]+)\\)\n")
 
   set(libcalls_libcall_name1 "~~([0-9a-f]+)~~ libc.so.6!puts\n")
   set(libcalls_libcall_name2 "~~([0-9a-f]+)~~ libc.so.6!open\n")
-  set(libcall_printf "arg 0: done \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_both_variants "arg 0: done \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
 endif(WIN32)
   set_tests_properties(drltrace_libcalls PROPERTIES PASS_REGULAR_EXPRESSION
                        ${libcall_name1}${libcall_args1_01}${libcall_ret})
   set_tests_properties(drltrace_symargs PROPERTIES PASS_REGULAR_EXPRESSION
                        ${libcall_name2}${libcall_args2_0}${libcall_args2_1})
   set_tests_properties(drltrace_libargs PROPERTIES PASS_REGULAR_EXPRESSION
-                       ${libcall_printf})
-  set_property(TEST drltrace_libargs APPEND PROPERTY DEPENDS ${libcall_WriteFile})
-
+                       ${libcall_both_variants})
 endif (BUILD_TOOL_TESTS)
