i#1948 library call arguments printing: kernel32 set of functions
Added most of the exported library calls from kernel32.dll. Microsoft SDKs
was used.
Added several Windows's types.
Fixed two tests for Linux and Windows according with the new changes.
Configuration file was splitted into two files for Linux and Windows respectively.

--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -132,7 +132,12 @@ copy_and_adjust_drpaths(${CMAKE_RUNTIME_OUTPUT_DIRECTORY} drltrace)
 # drltrace config
 
 set(conf_out ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drltrace.config)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/drltrace.config ${conf_out} COPYONLY)
+if (WIN32)
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/drltrace_win.config ${conf_out} COPYONLY)
+else ()
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/drltrace_linux.config ${conf_out} COPYONLY)
+endif ()
+
 install(FILES ${conf_out} DESTINATION "${INSTALL_BIN}" PERMISSIONS ${owner_access}
         GROUP_READ WORLD_READ)
 copy_target_to_device(${conf_out})
@@ -154,29 +159,33 @@ if (BUILD_TOOL_TESTS)
   add_test(drltrace_libargs ${drltrace_path} -logdir - -only_from_app -- ${app_path})
 
   #regex strings for libcalls and arguments printing test
-  set(libcall_args1_01 "    arg 0: 0x([0-9a-f]+)\n    arg 1: 0x([0-9a-f]+)\n")
   set(libcall_ret "    and return to module id:([0-9]+), offset:0x([0-9a-f]+)\n")
 
 if (WIN32)
+  set(libcall_args1_01 "    arg 0: 0x([0-9a-f]+) => 0x([0-9a-f]+) \\(type=void\\*, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_args1_02 "    arg 2: 0x([0-9a-f]+) \\(type=size_t, size=0x([0-9a-f]+)\\)\n")
+
   set(libcall_args2_0 "    arg 0: 0x([0-9a-f]+) \\(type=HANDLE, size=0x([0-9a-f]+)\\)\n")
   set(libcall_args2_1 "    arg 1: 0x([0-9a-f]+) \\(type=int, size=0x([0-9a-f]+)\\)\n")
 
   set(libcall_name1 "~~([0-9a-f]+)~~ KERNELBASE.dll!VirtualQuery\n")
   set(libcall_name2 "~~([0-9a-f]+)~~ ntdll.dll!ZwQueryInformationProcess\n")
-  set(libcall_printf "arg 0: done\n \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_printf "arg 0: done\n \\(type=char\\*, size=0x([0-9a-f]+)\\)\n")
   # some machines use WriteFile instead of printf, trying to handle both
   set(libcall_WriteFile "arg 2: 0x([0-9a-f]+) \\(type=DWORD, size=0x([0-9a-f]+)\\)\n")
   set(libcall_both_variants "${libcall_printf}\;${libcall_WriteFile}")
 else ()
+  set(libcall_both_variants "    arg 0: done \\(type=char\\*, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_args1_01 ${libcall_both_variants})
+
   set(libcall_args2_0 "    arg 0: /dev/null \\(type=char \\*\\*, size=0x([0-9a-f]+)\\)\n")
   set(libcall_args2_1 "    arg 1: 0x([0-9a-f]+) \\(type=<unknown>\\*, size=0x([0-9a-f]+)\\)\n")
 
-  set(libcalls_libcall_name1 "~~([0-9a-f]+)~~ libc.so.6!puts\n")
-  set(libcalls_libcall_name2 "~~([0-9a-f]+)~~ libc.so.6!open\n")
-  set(libcall_both_variants "arg 0: done \\(type=char \\*, size=0x([0-9a-f]+)\\)\n")
+  set(libcall_name1 "~~([0-9a-f]+)~~ libc.so.6!puts\n")
+  set(libcall_name2 "~~([0-9a-f]+)~~ libc.so.6!open\n")
 endif(WIN32)
   set_tests_properties(drltrace_libcalls PROPERTIES PASS_REGULAR_EXPRESSION
-                       ${libcall_name1}${libcall_args1_01}${libcall_ret})
+                       ${libcall_name1}${libcall_args1_01}${libcall_args1_02}${libcall_ret})
   set_tests_properties(drltrace_symargs PROPERTIES PASS_REGULAR_EXPRESSION
                        ${libcall_name2}${libcall_args2_0}${libcall_args2_1})
   set_tests_properties(drltrace_libargs PROPERTIES PASS_REGULAR_EXPRESSION
