--- a/drltrace/drltrace_linux.config
+++ b/drltrace/drltrace_linux.config
@@ -31,7 +31,7 @@
 #
 
 # ***************************************************************************
-# drltrace default config file for library call arguments printing
+# drltrace default config file for library call arguments printing in Linux.
 
 # The syntax of this config file is simple. To add a new function, it's enough to specify
 # function's return type, function name and each argument of the function separated by
@@ -46,4 +46,3 @@ int|strcmp|char *|char *
 int|wcscmp|wchar *|wchar *
 int|printf|char *
 int|puts|char *
-bool|WriteFile|handle|void*|dword|dword*|overlapped*
