--- a/drltrace/drltrace_linux.config
+++ b/drltrace/drltrace_linux.config
@@ -35,7 +35,8 @@
 
 # The syntax of this config file is simple. To add a new function, it's enough to specify
 # function's return type, function name and each argument of the function separated by
-# a pipe | symbol.
+# a pipe | symbol. A token __out is used to mark output arguments and __inout is used to
+# mark input and output arguments.
 # Example: int strcmp (char *, char *) -> int|strcmp|char *|char *
 # i#1948: The syntax now does not cover many other more complex function prototypes
 # e.g. atexit(). We need to improve that.
