--- a/drltrace/drltrace_win.config
+++ b/drltrace/drltrace_win.config
@@ -36,7 +36,7 @@
 # The syntax of this config file is simple. To add a new function, it's enough to specify
 # function's return type, function name and each argument of the function separated by
 # a pipe | symbol. A token __out is used to mark output arguments and ___inout is used to
-# mark input and output arguments.
+# mark input+output arguments.
 # Example: int strcmp (char *, char *) -> int|strcmp|char *|char *
 # i#1948: The syntax now does not cover many other more complex function prototypes
 # e.g. atexit(). We need to improve that.
@@ -1168,4 +1168,5 @@ wchar*|lstrcpyW|__out wchar*|wchar*
 char*|lstrcpynA|__out char*|char*|int
 wchar*|lstrcpynW|__out wchar*|wchar*|int
 int|lstrlenA|char*
+
 int|lstrlenW|wchar*
