i#1948 library call arguments printing: kernel32 set of functions (#2015)
Added most of the exported library calls from kernel32.dll. Microsoft SDK headers
were used.
Added several Windows types.
Fixed two tests for Linux and Windows according with the new changes.
Configuration file was split into the two files for Linux and Windows respectively.
Added two scripts that can be used for headers parsing.
Fixed small bug in the table_windows_ntuser.c.
Fixed AppVeyor build xml file.

--- a/drltrace/drltrace_linux.config
+++ b/drltrace/drltrace_linux.config
@@ -31,11 +31,12 @@
 #
 
 # ***************************************************************************
-# drltrace default config file for library call arguments printing
+# drltrace default config file for library call arguments printing in Linux.
 
 # The syntax of this config file is simple. To add a new function, it's enough to specify
 # function's return type, function name and each argument of the function separated by
-# a pipe | symbol.
+# a pipe | symbol. A token __out is used to mark output arguments and __inout is used to
+# mark input+output arguments.
 # Example: int strcmp (char *, char *) -> int|strcmp|char *|char *
 # i#1948: The syntax now does not cover many other more complex function prototypes
 # e.g. atexit(). We need to improve that.
@@ -46,4 +47,4 @@ int|strcmp|char *|char *
 int|wcscmp|wchar *|wchar *
 int|printf|char *
 int|puts|char *
-bool|WriteFile|handle|void*|dword|dword*|overlapped*
+
